# naloga1-demo

./: .gitignore  README.md
Go/: go.mod  main.go
Go/xkcd/: go.mod
OCaml/: dune-project  naloga1.opam
OCaml/lib/: dune  xkcd.ml  xkcd.mli
